fix publish indicator not showing in the right place

--- a/imports/plugins/included/default-theme/client/styles/media.less
+++ b/imports/plugins/included/default-theme/client/styles/media.less
@@ -84,10 +84,10 @@
 
   .rui.status-badge {
     position: absolute;
-    top: -17px;
-    right: -17px;
-    width: 16px;
-    height: 16px;
+    top: -23px;
+    right: -23px;
+    width: 20px;
+    height: 20px;
 
     .icon-only {
 
